# asr2clip

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  README_en.md  README_zh.md  asr2clip.conf.example  asr_to_clipboard.py  config.sample.yaml  environment.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  release.yml
asr2clip/: asr2clip.py  audio.py  config.py  daemon.py  logging.py  output.py  transcribe.py  utils.py  vad.py
asr2clip/admin/: __init__.py  admin.html  demo_server.py  handlers.py  server.py  static.py
asr2clip/engines/: __init__.py  audio_input.py  base.py  openai_compat.py  sherpa_onnx.py  whisper_cpp.py
asr2clip/local_asr/: __init__.py  app.py  engine.py  model_manager.py  model_registry.py
docs/: changelog.md  index.md
docs/api/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/usage/: basic.md  continuous-mode.md  index.md  local-asr.md  vad.md
