[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asr2clip"]

[tool.setuptools.dynamic]
version = { attr = "asr2clip.__version__" }

[project]
name = "asr2clip"
dynamic = ["version"]
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "A real-time speech-to-text clipboard tool."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU Affero General Public License v3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.24.4,<2.0; python_version<'3.9'",
    "numpy>=1.24.4; python_version>='3.9'",
    "pyperclip>=1.9.0",
    "PyYAML>=6.0.2",
    "sounddevice>=0.5.1",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/Oaklight/asr2clip"

[project.scripts]
asr2clip = "asr2clip.asr2clip:main"

[project.optional-dependencies]
dev = ["build>=1.0.0", "twine>=5.0.0", "pyright>=1.1.0", "ruff>=0.4.0"]
